--- a/app/templates/include/navbar.html
+++ b/app/templates/include/navbar.html
@@ -13,9 +13,9 @@
     </div>
     <div class="col-lg-12">
         <div id='menu' class=" col-lg-12 text-center ">
-            <a href="#">Anasayfa</a>
-            <a href="post-detail.html">Dökümanlar</a>
-            <a href="#">Kelime Egzersizi</a>
+            <a href="/">Anasayfa</a>
+            <a href="/post_list/1">Dökümanlar</a>
+            <a href="">Kelime Egzersizi</a>
         </div>
     </div>
 </div>
