--- a/app/templates/post/add_post.html
+++ b/app/templates/post/add_post.html
@@ -14,6 +14,7 @@
 
         {{ render_field(form.unit,class="form-control" ) }}
         {{ render_field(form.title,class="form-control" ) }}
+        {{ render_field(form.description,class="form-control" ) }}
         {{ render_field(form.content,class="form-control", id='editor' ) }}
 
         <input class="btn btn-info btn-block" type="submit" value="Create">
