--- a/app/templates/post/post_list.html
+++ b/app/templates/post/post_list.html
@@ -9,12 +9,11 @@
 
     <div id='containervh' class="container">
         <div class=" col-lg-12">
-            <div class="float-left   col-lg-6">
+            <div class="center col-lg-10">
                 <div class="col-lg-12">
                     <div class="list ">
                         <h3>Dökümanlar</h3>
                         <hr>
-
                         {% for post in posts.items %}
                             <div class='post'>
                                 <img src="{{ url_for('static',filename='img/doc-icon.png') }}" alt="">
@@ -24,60 +23,36 @@
                                 <p> {{ post.title }}</p>
                             </div>
                         {% endfor %}
-
-
-
                         <div class="pagination">
-                            <a href="#">❮</a>
-                            <a href="#">❯</a>
+                            {% if posts.has_prev %}
+                                {% if posts.prev_num==1 %}
+                                    <a href="{{ url_for('post_list', page_num=posts.prev_num) }}">❮</a>
+                                    <a href="#">❯</a>
+                                {% else %}
+                                    <a href="{{ url_for('post_list', page_num=posts.prev_num) }}">❮</a>
+
+                                {% endif %}
+                            {% endif %}
+                            {% if posts.has_next %}
+                                {% if posts.page==1 %}
+                                    <a href="#">❮</a>
+                                    <a href="{{ url_for('post_list', page_num=posts.next_num) }}">❯</a>
+                                {% else %}
+                                    <a href="{{ url_for('post_list', page_num=posts.next_num) }}">❯</a>
+
+                                {% endif %}
+                            {% endif %}
+
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="float-right   col-lg-6">
-                <div class="col-lg-12">
-                    <div class="list ">
-                        <h3>Kelime Egzersizleri</h3>
-                        <hr>
-                        <div class='post'>
-                            <img src="{{ url_for('static',filename='img/icon_word.png') }}" alt="">
-                            <a href='#'>Unit 1</a>
-                            <p>10.10.2010</p>
 
-                            <p> Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Laudantium, voluptate...</p>
-                        </div>
-
-                        <div class='post'>
-                            <img src="{{ url_for('static',filename='img/icon_word.png') }}" alt="">
-                            <a href='#'>Unit 2</a>
-                            <p>10.10.2010</p>
-
-                            <p> Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Laudantium, voluptate...</p>
-                        </div>
-
-                        <div class='post'>
-                            <img src="{{ url_for('static',filename='img/icon_word.png') }}" alt="">
-                            <a href='#'>Unit 3</a>
-                            <p>10.10.2010</p>
-
-                            <p> Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Laudantium, voluptate...</p>
-
-
-                        </div>
-                        <div class="pagination">
-                            <a href="#">❮</a>
-                            <a href="#">❯</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
         </div>
-
     </div>
+
+
 
 
 
